--- a/13-microservice-example/frontend/index.html
+++ b/13-microservice-example/frontend/index.html
@@ -124,6 +124,36 @@
         </div>
     </div>
 
+    <!-- Modal for Editing Post -->
+    <div class="modal fade" id="editPostModal" tabindex="-1" aria-labelledby="editPostModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editPostModalLabel">Edit Post</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="editPostForm" onsubmit="event.preventDefault(); updatePost();">
+                        <input type="hidden" id="editPostId">
+                        <div class="mb-3">
+                            <label for="editPostTitle" class="form-label">Title</label>
+                            <input type="text" class="form-control" id="editPostTitle" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editPostContent" class="form-label">Content</label>
+                            <textarea class="form-control" id="editPostContent" rows="4" required></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" onclick="deletePost()">Delete</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" onclick="updatePost()">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Configuration must be loaded first -->
